--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Pagina Sencilla</title>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
-<body>
-	<h1>Videojuegos Top por Década</h1>
+<body background="imgs/Fondo-Monedas.jpg">
+	<h1> <B>Videojuegos Top por Década</B></h1>
 	<nav>
 		<ul>
 			<li><a href="">80's</a></li>
@@ -14,17 +14,17 @@
 			<li><a href="">10's</a></li>
 		</ul>	
 	</nav>
-		    <div>
+		    <div> <center> <img src="imgs/Control.png" aling="middle">
 		    	<h2>¿Qué son los videojuegos?</h2>
-		    	<p>Un videojuego es una aplicación interactiva orientada al entretenimiento que, a través de ciertos mandos o controles, permite simular experiencias en la pantalla de un televisor, una computadora u otro dispositivo electrónico.</p>
-		    	<p>Los videojuegos se diferencian de otras formas de entretenimiento, como de las películas, en que deben ser interactivos; en otras palabras, los usuarios deben involucrarse activamente con el contenido. Para ello, es necesario utilizar un mando (también conocido como gamepad o joystick), mediante el cual se envían órdenes al dispositivo principal (un ordenador o una consola especializada) y estas se ven reflejadas en una pantalla con el movimiento y las acciones de los personajes.</p>
-		    </div>
-		    <div><img src="img/videojuego.jpg"></div>
-
-		    
-		    
+		    	<h3><p>Un videojuego es una aplicación interactiva orientada al entretenimiento que, a través de ciertos</p>
+				<p>mandos o controles, permite simular experiencias en la pantalla de un televisor, una computadora</p>
+				<p>u otro dispositivo electrónico.</p>
+		    	<br><p>Los videojuegos se diferencian de otras formas de entretenimiento, como de las películas, en que deben</p>
+				<p>ser interactivos; en otras palabras, los usuarios deben involucrarse activamente con el contenido.</p>
+				<p>Para ello, es necesario utilizar un mando (también conocido como gamepad o joystick), mediante el cual</p>
+				<p>se envían órdenes al dispositivo principal (un ordenador o una consola especializada) y estas se ven</p>
+				<p>reflejadas en una pantalla con el movimiento y las acciones de los personajes.</p></h3>
+		    </div></center>
 		
-	
-
 </body>
 </html>
