--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 				<p>reflejadas en una pantalla con el movimiento y las acciones de los personajes.</p></h3>
 		    </div></center>
 		<footer>
-			<h4><p>bibliografia:https://www.fib.upc.edu/retro-informatica/historia/videojocs.html,</p>
+			<h4><p>bibliografia:</p>
+			<p>https://www.fib.upc.edu/retro-informatica/historia/videojocs.html,</p>
 			<p>https://www.marca.com/esports/otros-juegos/2020/12/20/5fdf171422601d7b468b45ba.html,</p>
 			<p>https://www.marca.com/esports/2020/12/25/5fe60a7d46163f17a18b4595.html,</p>
 			<p>https://www.muycomputer.com/2019/12/07/mejores-juegos-decada-2010-2019/</p></h4>
