--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <br>
 	<header>
 		<nav class="nav">
-			<div class="logo">TRABAJO 1 - Hecho Por: Esteban Quiceno, Sebastián Forrero y Johnson Chen </div>
+			<div class="logo">TRABAJO 1 - Hecho Por: Juan Felipe Ramirez y Johnson Chen </div>
 			<ul class="menu">
 				<li><a href="#¿Qué son los videojuegos?" class="selected">¿Qué son los videojuegos?</a></li>
 				<li><a href="#Los VideoJuegos más populares de la historia">Los VideoJuegos más populares de la historia</a></li>
