--- a/Pokemon.html
+++ b/Pokemon.html
@@ -4,6 +4,8 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        
+        <section id="vitrina" class="pagina">
+            <span>Dale Click Para Descubrir Algo Genial</span>
+        </section>
     </body>
 </html>
