--- a/Pokemon.html
+++ b/Pokemon.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <title>Juegos</title>
+        <title>Pokemones</title>
         <script src="js/main.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <section id="vitrina" class="pagina">
