--- a/Pokedex.html
+++ b/Pokedex.html
@@ -11,11 +11,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1 class="title">POKEDEX</h1>
+<h1 class="title">CONOCE MAS SOBRE LOS POKEMONES</h1>
 <div class="pokemon-container">
 
 </div>
-<div class="spinner-border text-secondary" role="status">
+
+<nav class="pagination">
+    <ul class="pagination">
+      <li id="previous" class="page-item"><a class="page-link" href="#">Anterior</a></li>
+      <li id="next" class="page-item"><a class="page-link" href="#">Siguiente</a></li>
+    </ul>
+  </nav>
+
+<div id="spinner" class="spinner-border text-secondary" role="status">
   <span class="visually-hidden">Loading...</span>
 </div>
     <script src="js/JsPokedex.js"></script>
