--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 				<p>alcanzó su apogeo en la década de los 90.</p></h3>
 			</section>
 			</div>
+			<section class="Pokemon">
+				<h2> Y tambien tenemos a los pokemon </h2>
+			</section>
 			<br> <br>
 		<footer>
 			<section class="Bibliografia" id="Bibliografia"><h4><p>Bibliografía:</p>
