--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 			</div>
 			<section class="Pokemon">
 				<h2> Y tambien tenemos a los pokemon </h2>
+				<a href="pokemon.html">Puedes conocer mas de los pokemon aqui</a>
 			</section>
 			<br> <br>
 		<footer>
