--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
 			</section>
 			</div>
 			<br> <br>
+			<br> <br> <br> <br>
+			
+			<section>
+				<h1>Descubre mas sobre Pokemones dando click en la imagen</h1>
+			<a href="Pokedex.html" target="_blank">
+				<center><img src="imgs/Pokedex.jpg" aling="middle"></center>
+			</a></section>
 		<footer>
 			<section class="Bibliografia" id="Bibliografia"><h4><p>Bibliografía:</p>
 			<p>https://www.fib.upc.edu/retro-informatica/historia/videojocs.html</p>
