--- a/Pokedex.html
+++ b/Pokedex.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1 class="title">BIENVENIDOS A LA POKEDEX</h1>
+<center><h1 class="title">BIENVENIDOS A LA POKEDEX</h1></center>
 <div class="pokemon-container">
 
 </div>
