--- a/index.html
+++ b/index.html
@@ -59,6 +59,88 @@
 			<a href="#" class="btn"> Leer Más <i class="fas fa-angle-double-right"></i></a>
 		</header>
 
+		<!-- TOP -->
+		<div class="news-cards">
+
+			<div>
+				<img src="imgs/Tetris-GameBoy.jpg" alt="games">
+				<h3>¿Qué son los videojuegos?</h3>
+				<p>Un videojuego es una aplicación interactiva orientada al entretenimiento que, a través de ciertos mandos o controles, permite simular experiencias en la pantalla de un televisor, una computadora u otro dispositivo electrónico.</p> <br>
+				<p>Los videojuegos se diferencian de otras formas de entretenimiento, como de las películas, en que deben ser interactivos; en otras palabras, los usuarios deben involucrarse activamente con el contenido. Para ello, es necesario utilizar un mando (también conocido como gamepad o joystick), mediante el cual se envían órdenes al dispositivo principal (un ordenador o una consola especializada) y estas se ven reflejadas en una pantalla con el movimiento y las acciones de los personajes.</p>
+				<a href="https://medium.com/grupo-carricay/qué-son-los-videojuegos-d640dcb6aa84" target="_blank"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+
+			<div>
+				<img src="imgs/VideoJuegos.jpg" alt="games">
+				<h3>¿Los juegos más populares?</h3>
+				<p>Sabemos muy bien que en la industria de los juegos hay varios titulos que marcaron nuestras vidas y nuestras infancias, pero hay algunos titulos en concreto que revolucionaron esta industria de los juegos y estos son algunos de los juegos que han sido bastantes populares a lo largo de la historia, como lo pueden ser Tetris, Pacman, Space Invaders, Age Of Empires, Street Fighter, Mortal Kombat, Grand Theft Auto, Resident Evil, Gran Turismo y el Super Mario Bros.</p>
+				<a href="https://www.portafolio.co/tendencias/videojuegos-populares-historia-123394" target="_blank"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+
+			<div>
+				<img src="imgs/Tetris.jpg" alt="games">
+				<h3>Tetris</h3>
+				<p>Tetris es considerado uno de los juegos más importantes en los 80 y parte de los años 90, fue inventado por el ruso Alekéi Pázhitnov, este juego fue bastante popular por todo el planeta, gracias a la consola de la GameBoy, el objetivo del juego es conformar la mayor cantidad de lineas posibles en un espacio, sin permitir que las figuras lleguen al techo.</p>
+				<a href="https://www.portafolio.co/tendencias/videojuegos-populares-historia-123394" target="_blank"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+
+			<div>
+				<img src="imgs/PacMan.jpg" alt="games">
+				<h3>Pac-Man</h3>
+				<p>Pac-Man, salió a la luz en 1980 y en todo su tiempo en el mercado tuvo el récord de ser el juego tipo "arcarde" más exitoso, con 293.822 consolas vendidas. Y este juego consisitia de un tablero en donde un circulo amarillo (Pac-Man) va comiendo puntos y es a su vez perseguido por fantasmas. Este juego alcanzó su apogeo en la década de los 90.</p>
+				<a href="https://www.portafolio.co/tendencias/videojuegos-populares-historia-123394" target="_blank"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+
+		</div>
+
+		<section class="cards-banner-one">
+			<div class="content">
+				<h2>Lorem, ipsum dolor.</h2>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, illum.</p>
+				<a href="#" class="btn"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+		</section>
+
+		<div class="news-cards">
+
+			<div>
+				<img src="imgs/Space-Invader.png" alt="games">
+				<h3>Space Invaders</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, laboriosam?</p>
+				<a href="https://www.portafolio.co/tendencias/videojuegos-populares-historia-123394" target="_blank"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+
+			<div>
+				<img src="imgs/Age-Of-Empires.jpg" alt="games">
+				<h3>Age Of Empires</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, laboriosam?</p>
+				<a href="https://www.portafolio.co/tendencias/videojuegos-populares-historia-123394" target="_blank"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+
+			<div>
+				<img src="imgs/Street-Fighter.jpg" alt="games">
+				<h3>Street Fighter</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, laboriosam?</p>
+				<a href="https://www.portafolio.co/tendencias/videojuegos-populares-historia-123394" target="_blank"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+
+			<div>
+				<img src="imgs/MK.jpg" alt="games">
+				<h3>Mortal Kombat</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, laboriosam?</p>
+				<a href="https://www.portafolio.co/tendencias/videojuegos-populares-historia-123394" target="_blank"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+
+		</div>
+
+		<section class="cards-banner-two">
+			<div class="content">
+				<h2>Lorem, ipsum dolor.</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, fugit?</p>
+				<a href="#" class="btn"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+			</div>
+		</section>
+
 	</div>
 
 </body>
