--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<section class="cards-banner-one">
 			<div class="content">
 				<h2>Lorem, ipsum dolor.</h2>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, illum.</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, asperiores?</p>
 				<a href="#" class="btn"> Leer Más <i class="fas fa-angle-double-right"></i></a>
 			</div>
 		</section>
@@ -136,9 +136,9 @@
 
 		<section class="cards-banner-two">
 			<div class="content">
-				<h2>Lorem, ipsum dolor.</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, fugit?</p>
-				<a href="#" class="btn"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+				<h2>¡Mira Nuestra Galeria De Imagenes Acerca De Juegos!</h2>
+				<p>Dandole click al botón podras descubrir varias fotos de los juegos mas reconocidos.</p>
+				<a href="Galeria.html" class="btn"> ¡Descubre la Galeria! <i class="fas fa-angle-double-right"></i></a>
 			</div>
 		</section>
 
