--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
 
 		<section class="cards-banner-one">
 			<div class="content">
-				<h2>Lorem, ipsum dolor.</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, asperiores?</p>
-				<a href="#" class="btn"> Leer Más <i class="fas fa-angle-double-right"></i></a>
+				<h2>Aqui va el Slider</h2>
+				<p>Por aqui va a Slider</p>
 			</div>
 		</section>
 
@@ -143,6 +142,7 @@
 		</section>
 
 		<section class="social">
+			<p>Integrantes: Johnson Chen - Juan Felipe Ramirez</p>
 			<p>Bibliografia</p>
 			<div class="links">
 
@@ -165,7 +165,7 @@
 				<a href="https://www.hobbyconsolas.com/listas/20-videojuegos-mas-populares-historia-357957" target="_blank">
 					<i class="fab fa-chrome"></i>
 				</a>
-				
+
 				<a href="https://medium.com/grupo-carricay/qué-son-los-videojuegos-d640dcb6aa84" target="_blank">
 					<i class="fab fa-chrome"></i>
 				</a>
