--- a/index.html
+++ b/index.html
@@ -97,6 +97,22 @@
 			<div class="content">
 				<h2>Aqui va el Slider</h2>
 				<p>Por aqui va a Slider</p>
+				<ul class="slider1">
+					<li class="imagen1">
+						<img scr="imgs/PacMan2.png">
+					</li>
+					<li class="imagen2">
+						<img scr="imgs/PacMan3.jpg">
+					</li>
+				</ul>
+				<ul class="slider2">
+					<li class="imagen3">
+						<img scr="imgs/Tetris2.jpg">
+					</li>
+					<li class="imagen4">
+						<img scr="imgs/Tetris3.png">
+					</li>
+				</ul>
 			</div>
 		</section>
 
