--- a/index.html
+++ b/index.html
@@ -105,12 +105,29 @@
 						<img scr="imgs/PacMan3.jpg">
 					</li>
 				</ul>
+				<ul class="menu1">
+					<li>
+						<a href="pc2">1</a>
+					</li>
+					<li>
+						<a href="pc3">2</a>
+					</li>
+				</ul>
+				
 				<ul class="slider2">
 					<li class="imagen3">
 						<img scr="imgs/Tetris2.jpg">
 					</li>
 					<li class="imagen4">
 						<img scr="imgs/Tetris3.png">
+					</li>
+				</ul>
+				<ul class="menu2">
+					<li>
+						<a href="tt2">1</a>
+					</li>
+					<li>
+						<a href="tt3">2</a>
 					</li>
 				</ul>
 			</div>
