--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
 			<div class="content">
 				<h2>Aqui va el Slider</h2>
 				<p>Por aqui va a Slider</p>
+				
+				<article class="sl1">
 				<ul class="slider1">
-					<li class="imagen1">
+					<li id="imagen1">
 						<img scr="imgs/PacMan2.png">
 					</li>
-					<li class="imagen2">
+					<li id="imagen2">
 						<img scr="imgs/PacMan3.jpg">
 					</li>
 				</ul>
@@ -113,12 +115,14 @@
 						<a href="pc3">2</a>
 					</li>
 				</ul>
+				</article>
 				
+				<article class="sl2">
 				<ul class="slider2">
-					<li class="imagen3">
+					<li id="imagen3">
 						<img scr="imgs/Tetris2.jpg">
 					</li>
-					<li class="imagen4">
+					<li id="imagen4">
 						<img scr="imgs/Tetris3.png">
 					</li>
 				</ul>
@@ -130,6 +134,7 @@
 						<a href="tt3">2</a>
 					</li>
 				</ul>
+				</article>
 			</div>
 		</section>
 
