--- a/index.html
+++ b/index.html
@@ -94,47 +94,26 @@
 		</div>
 
 		<section class="cards-banner-one">
-			<div class="content">
-				<h2>Aqui va el Slider</h2>
-				<p>Por aqui va a Slider</p>
-				
-				<article class="sl1">
-				<ul class="slider1">
-					<li id="imagen1">
-						<img scr="imgs/PacMan2.png">
-					</li>
-					<li id="imagen2">
-						<img scr="imgs/PacMan3.jpg">
-					</li>
-				</ul>
-				<ul class="menu1">
+			<div class="slider">
+				<ul>
+
 					<li>
-						<a href="pc2">1</a>
+						<img src="./imgs/PacMan2.png" alt="Pac-Man">
 					</li>
+
 					<li>
-						<a href="pc3">2</a>
+						<img src="./imgs/PacMan3.jpg" alt="Pac-Man">
 					</li>
-				</ul>
-				</article>
-				
-				<article class="sl2">
-				<ul class="slider2">
-					<li id="imagen3">
-						<img scr="imgs/Tetris2.jpg">
-					</li>
-					<li id="imagen4">
-						<img scr="imgs/Tetris3.png">
-					</li>
-				</ul>
-				<ul class="menu2">
+
 					<li>
-						<a href="tt2">1</a>
+						<img src="./imgs/Tetris2.jpg" alt="Tetris">
 					</li>
+
 					<li>
-						<a href="tt3">2</a>
+						<img src="./imgs/Tetris3.png" alt="Tetris">
 					</li>
+
 				</ul>
-				</article>
 			</div>
 		</section>
 
